; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_trapcc_16.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_trapcc_16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_TYPE = common dso_local global i32 0, align 4
@EXCEPTION_TRAPV = common dso_local global i32 0, align 4
@REG_PC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_trapcc_16() #0 {
  %1 = load i32, i32* @CPU_TYPE, align 4
  %2 = call i64 @CPU_TYPE_IS_EC020_PLUS(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %13

4:                                                ; preds = %0
  %5 = call i64 (...) @COND_CC()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %4
  %8 = load i32, i32* @EXCEPTION_TRAPV, align 4
  %9 = call i32 @m68ki_exception_trap(i32 %8)
  br label %15

10:                                               ; preds = %4
  %11 = load i32, i32* @REG_PC, align 4
  %12 = add nsw i32 %11, 2
  store i32 %12, i32* @REG_PC, align 4
  br label %15

13:                                               ; preds = %0
  %14 = call i32 (...) @m68ki_exception_illegal()
  br label %15

15:                                               ; preds = %13, %10, %7
  ret void
}

declare dso_local i64 @CPU_TYPE_IS_EC020_PLUS(i32) #1

declare dso_local i64 @COND_CC(...) #1

declare dso_local i32 @m68ki_exception_trap(i32) #1

declare dso_local i32 @m68ki_exception_illegal(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
